--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "typescript": "^5.7.3",
-    "@types/node": "^22.13.4"
+    "@types/node": "^22.13.4",
+    "typescript": "^5.7.3"
   },
   "dependencies": {
     "agent-twitter-client": "git+git@github.com:bozoverse/agent-twitter-client.git",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
-    "ioredis": "^5.5.0",
-    "twitter-api-v2": "^1.20.1",
+    "mongoose": "^8.10.1",
+    "p-limit": "^6.2.0",
     "viem": "^2.23.3"
   },
   "engines": {
