--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "dotenv": "^16.4.7",
     "mongoose": "^8.10.1",
     "p-limit": "^6.2.0",
+    "prettier": "^3.5.3",
     "viem": "^2.23.3"
   },
   "engines": {
