--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "npx tsx ./src/index.ts",
     "format": "prettier --write ."
   },
   "keywords": [],
